--- a/IPSX/Storyboard/Base.lproj/Search.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Search.storyboard
@@ -119,6 +119,7 @@
                                     <constraint firstItem="cQf-Ca-cxL" firstAttribute="top" secondItem="mUr-Lf-y1z" secondAttribute="bottom" constant="13" id="gFb-JV-2zb"/>
                                     <constraint firstItem="cQf-Ca-cxL" firstAttribute="leading" secondItem="Yhr-9L-cfB" secondAttribute="leading" constant="15" id="mMJ-B4-IeS"/>
                                     <constraint firstAttribute="trailing" secondItem="cQf-Ca-cxL" secondAttribute="trailing" constant="15" id="rQB-Ox-OTH"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mUr-Lf-y1z" secondAttribute="trailing" constant="20" symbolic="YES" id="uT4-C2-a57"/>
                                     <constraint firstItem="mUr-Lf-y1z" firstAttribute="top" secondItem="Yhr-9L-cfB" secondAttribute="top" constant="28" id="wjS-ko-32i"/>
                                 </constraints>
                             </view>
