Implement logic for options & cleanup

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -750,7 +750,7 @@
                 <viewControllerPlaceholder storyboardName="WalletAdd" referencedIdentifier="WalletEditID" id="f4i-TE-mFB" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c8R-Sg-vJf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2649" y="874"/>
+            <point key="canvasLocation" x="2622" y="922"/>
         </scene>
         <!--Profile-->
         <scene sceneID="e5X-ZR-dkq">
@@ -1010,7 +1010,7 @@
                                                 <constraint firstAttribute="height" constant="47" id="dMp-hk-4zP"/>
                                             </constraints>
                                             <connections>
-                                                <segue destination="f4i-TE-mFB" kind="show" identifier="walletAddIdentifier" id="FXn-y3-NoT"/>
+                                                <action selector="addWalletAction:" destination="pEl-nG-Fp4" eventType="touchUpInside" id="Qi7-9o-qKa"/>
                                             </connections>
                                         </button>
                                     </subviews>
@@ -1166,7 +1166,6 @@
         <image name="Wallet" width="26" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TUj-iw-bz7"/>
         <segue reference="Kc9-Od-4gN"/>
         <segue reference="eg6-mz-aaC"/>
     </inferredMetricsTieBreakers>
