--- a/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
@@ -473,6 +473,13 @@
                                     <segue destination="iJa-Yr-c0U" kind="unwind" identifier="showLoginSegueID" unwindAction="unwindToLoginOptionsWithSegue:" id="Czp-TC-IjR"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRV-Xq-2Wd" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="64" width="375" height="0.5"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.29588468309859156" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="OCJ-1t-AAd"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A3O-NY-cF5" userLabel="Top Bar">
                                 <rect key="frame" x="0.0" y="-30" width="375" height="94"/>
                                 <subviews>
@@ -490,20 +497,10 @@
                                         <rect key="frame" x="135" y="62" width="105" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRV-Xq-2Wd" userLabel="Separator">
-                                        <rect key="frame" x="0.0" y="93" width="375" height="1"/>
-                                        <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="0.5" id="5BR-8r-PZV"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="94" id="0Vv-Ut-0jf"/>
-                                    <constraint firstAttribute="bottom" secondItem="cRV-Xq-2Wd" secondAttribute="bottom" id="JnM-AX-MeK"/>
-                                    <constraint firstItem="cRV-Xq-2Wd" firstAttribute="leading" secondItem="A3O-NY-cF5" secondAttribute="leading" id="UsR-gi-IVx"/>
-                                    <constraint firstAttribute="trailing" secondItem="cRV-Xq-2Wd" secondAttribute="trailing" id="iCf-MH-jwJ"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ac-vC-zkK" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
@@ -535,11 +532,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="cRV-Xq-2Wd" firstAttribute="leading" secondItem="nCy-GT-MJK" secondAttribute="leading" id="9yc-Un-ecB"/>
                             <constraint firstItem="QOC-Kv-ctQ" firstAttribute="leading" secondItem="nCy-GT-MJK" secondAttribute="leading" id="Dwz-hR-6DS"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="bottom" secondItem="QOC-Kv-ctQ" secondAttribute="bottom" id="FsF-iO-KnE"/>
                             <constraint firstItem="4Ac-vC-zkK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="BpD-ts-qWc" secondAttribute="bottom" constant="40" id="Jg6-6o-NqJ"/>
+                            <constraint firstItem="nCy-GT-MJK" firstAttribute="trailing" secondItem="cRV-Xq-2Wd" secondAttribute="trailing" id="MZT-7U-n4E"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="top" secondItem="QOC-Kv-ctQ" secondAttribute="top" constant="20" id="Plo-o1-Mwq"/>
-                            <constraint firstItem="ij5-YA-s4T" firstAttribute="top" secondItem="A3O-NY-cF5" secondAttribute="bottom" priority="750" constant="24" id="Qcu-4k-Ny3"/>
                             <constraint firstItem="BZf-gw-FXf" firstAttribute="centerX" secondItem="nCy-GT-MJK" secondAttribute="centerX" id="SZe-LV-RLE"/>
                             <constraint firstItem="BpD-ts-qWc" firstAttribute="top" secondItem="ij5-YA-s4T" secondAttribute="bottom" constant="38" id="WQo-Rn-aNF"/>
                             <constraint firstItem="4Ac-vC-zkK" firstAttribute="centerX" secondItem="nCy-GT-MJK" secondAttribute="centerX" id="csu-sA-Fda"/>
@@ -551,8 +549,10 @@
                             <constraint firstItem="BZf-gw-FXf" firstAttribute="centerY" secondItem="nCy-GT-MJK" secondAttribute="centerY" id="lDF-FR-wKS"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="trailing" secondItem="A3O-NY-cF5" secondAttribute="trailing" id="lkc-sG-gFR"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="top" secondItem="A3O-NY-cF5" secondAttribute="top" constant="50" id="nbX-uY-0wj"/>
+                            <constraint firstItem="ij5-YA-s4T" firstAttribute="top" secondItem="cRV-Xq-2Wd" secondAttribute="bottom" priority="750" constant="23" id="rS3-1K-vCu"/>
                             <constraint firstItem="A3O-NY-cF5" firstAttribute="leading" secondItem="nCy-GT-MJK" secondAttribute="leading" id="vCF-AN-9em"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="trailing" secondItem="QOC-Kv-ctQ" secondAttribute="trailing" id="vQb-Ax-Fpk"/>
+                            <constraint firstItem="cRV-Xq-2Wd" firstAttribute="top" secondItem="A3O-NY-cF5" secondAttribute="bottom" id="yGt-dd-W4Z"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nCy-GT-MJK"/>
                     </view>
@@ -563,6 +563,9 @@
                         <outlet property="continueButton" destination="4Ac-vC-zkK" id="np9-RD-6G9"/>
                         <outlet property="emailRichTextView" destination="a1n-CG-s9R" id="Lfe-uO-s7b"/>
                         <outlet property="loadingView" destination="BZf-gw-FXf" id="CLj-in-F7v"/>
+                        <outlet property="separatorView" destination="cRV-Xq-2Wd" id="2Y7-LS-UOv"/>
+                        <outlet property="topBarView" destination="A3O-NY-cF5" id="UGa-5o-8NZ"/>
+                        <outlet property="topConstraintOutlet" destination="yGt-dd-W4Z" id="7lz-18-HfR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sRN-0L-50g" userLabel="First Responder" sceneMemberID="firstResponder"/>
