--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -551,13 +551,23 @@
                                 <color key="progressTintColor" red="0.1647058824" green="0.67500001190000003" blue="0.87800002099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="trackTintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </progressView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ckb-Qp-y65" userLabel="Toast holder">
+                                <rect key="frame" x="0.0" y="20" width="375" height="48"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="2l7-Pq-Mxr"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="ckb-Qp-y65" firstAttribute="leading" secondItem="tpc-I8-m3e" secondAttribute="leading" id="EqK-JY-Mw9"/>
+                            <constraint firstItem="tpc-I8-m3e" firstAttribute="trailing" secondItem="ckb-Qp-y65" secondAttribute="trailing" id="HO9-0v-57x"/>
                             <constraint firstItem="eXh-IL-aYB" firstAttribute="leading" secondItem="BeR-jj-Hrg" secondAttribute="leading" id="HwV-ah-H6h"/>
                             <constraint firstItem="tpc-I8-m3e" firstAttribute="bottom" secondItem="SnG-5v-wAn" secondAttribute="bottom" id="OEv-Q9-Kql"/>
                             <constraint firstItem="BeR-jj-Hrg" firstAttribute="centerY" secondItem="tpc-I8-m3e" secondAttribute="centerY" id="Ril-GR-12Z"/>
                             <constraint firstItem="aK4-hy-ybg" firstAttribute="centerX" secondItem="tpc-I8-m3e" secondAttribute="centerX" id="VBa-u0-POC"/>
+                            <constraint firstItem="ckb-Qp-y65" firstAttribute="top" secondItem="tpc-I8-m3e" secondAttribute="top" id="Vvf-VD-dkK"/>
                             <constraint firstItem="eXh-IL-aYB" firstAttribute="trailing" secondItem="BeR-jj-Hrg" secondAttribute="trailing" id="bAv-U4-SCh"/>
                             <constraint firstItem="eXh-IL-aYB" firstAttribute="top" secondItem="BeR-jj-Hrg" secondAttribute="bottom" constant="8" id="f2g-L0-t6a"/>
                             <constraint firstItem="tpc-I8-m3e" firstAttribute="top" secondItem="SnG-5v-wAn" secondAttribute="top" constant="20" id="iwe-OI-BSi"/>
@@ -569,8 +579,10 @@
                         <viewLayoutGuide key="safeArea" id="tpc-I8-m3e"/>
                     </view>
                     <connections>
-                        <outlet property="backgroundImageView" destination="SnG-5v-wAn" id="Un8-Ic-ga8"/>
+                        <outlet property="backgroundImageView" destination="SnG-5v-wAn" id="ML8-4a-qwn"/>
                         <outlet property="progressView" destination="eXh-IL-aYB" id="OHm-uH-AEV"/>
+                        <outlet property="toastHolderView" destination="ckb-Qp-y65" id="hDk-Ff-1SB"/>
+                        <outlet property="topConstraintOutlet" destination="Vvf-VD-dkK" id="5PK-Fd-Oxe"/>
                         <segue destination="zhc-5m-q3f" kind="presentation" identifier="TabbarSegueID" modalTransitionStyle="flipHorizontal" id="IFJ-cL-CAB"/>
                     </connections>
                 </viewController>
